# grag

./: .env.example  .gitignore  CLAUDE.md  README.md  URL_INGESTION.md  app.py  clear_neo4j.py  neo4j_utils.py  plan.md  pyproject.toml  requirements.txt  simple_upload_test.py  test_url_fetch.py  test_url_integration.py
components/: __init__.py  document_processor.py  graph_builder.py  graph_extractor.py  neo4j_manager.py  qa_engine.py  visualizer.py
sample_docs/: silicon_valley_companies.txt  steve_jobs_biography.txt  technology_history.txt
utils/: __init__.py
